WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
18394
REGRESSION: FontDescription.h change breaks WebKit Windows Cairo build
https://bugs.webkit.org/show_bug.cgi?id=18394
Summary
REGRESSION: FontDescription.h change breaks WebKit Windows Cairo build
Brent Fulgham
Reported
2008-04-09 14:49:32 PDT
WebKit on Windows (Cairo-backed) build fails due to change in method signatures in FontDescription.h. The attached patch corrects the problem.
Attachments
Correct build regression
(1.46 KB, patch)
2008-04-09 14:57 PDT
,
Brent Fulgham
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Brent Fulgham
Comment 1
2008-04-09 14:57:25 PDT
Created
attachment 20442
[details]
Correct build regression
mitz
Comment 2
2008-04-09 15:40:51 PDT
Comment on
attachment 20442
[details]
Correct build regression r=me
Matt Lilek
Comment 3
2008-04-09 16:28:08 PDT
Committed revision 31763.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug