2008-04-09  Brent Fulgham  <bfulgham@gmail.com>

Reviewed by Mitz.

        Correct build regression in Windows (Cairo) build due to changes
        in FontDescription.h signature.  (see http://bugs.webkit.org/show_bug.cgi?id=18394)

        * rendering/RenderThemeWin.cpp:  Change for new font methods.
        (WebCore::RenderThemeWin::systemFont):



Canonical link: https://commits.webkit.org/25315@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@31763 268f45cc-cd09-0410-ab3c-d52691b4dbfc