WebCore/rendering/RenderThemeWin.cpp
@@ -370,7 +370,7 @@ void RenderThemeWin::systemFont(int propId, FontDescription& fontDescription) co
         cachedDesc->setGenericFamily(FontDescription::NoFamily);
         cachedDesc->firstFamily().setFamily("Lucida Grande");
         cachedDesc->setSpecifiedSize(fontSize);
-        cachedDesc->setBold(false);
+        cachedDesc->setWeight(FontWeightNormal);
         cachedDesc->setItalic(false);
     }
     fontDescription = *cachedDesc;
